# VulkanApps

./: .gitignore  CMakeLists.txt  CMakeMacros.txt  README.md
001 - Triangle/: CMakeLists.txt
001 - Triangle/Assets/Shaders/: Triangle.vert
001 - Triangle/src/: Triangle.cpp  Triangle.h
002 - TexturedModel/: CMakeLists.txt
002 - TexturedModel/Assets/Shaders/: TexturedModel.frag  TexturedModel.vert
002 - TexturedModel/src/: TexturedModel.cpp  TexturedModel.h  Vertex.h
003 - Instancing/: CMakeLists.txt
003 - Instancing/Assets/Shaders/: Instance.frag  Instance.vert
003 - Instancing/src/: Instance.h  Instancing.cpp  Instancing.h  Vertex.h
004 - RasterSpheres/: CMakeLists.txt
004 - RasterSpheres/Assets/Shaders/: Instance.frag  Instance.vert
004 - RasterSpheres/src/: Instance.h  RasterSpheres.cpp  RasterSpheres.h  Vertex.h
005 - RayTraceSpheres/: CMakeLists.txt
005 - RayTraceSpheres/Assets/Shaders/: Constants.h  Random.glsl  RayPayload.glsl  RayTrace.rchit  RayTrace.rgen  RayTrace.rmiss  UniformBufferObject.h  Vertex.h
005 - RayTraceSpheres/src/: RayTraceSpheres.cpp  RayTraceSpheres.h
006 - RayTracer/: CMakeLists.txt
006 - RayTracer/Assets/Models/: source_attribution.txt
006 - RayTracer/Assets/Shaders/: AABBs.rchit  AABBs.rint  Bindings.glsl  Box.rint  Constants.glsl  Material.glsl  Offset.glsl  Random.glsl  RayPayload.glsl  RayTrace.rchit  RayTrace.rgen  RayTrace.rmiss  SNoise.glsl  Scatter.glsl  Sphere.rchit  Sphere.rint  Texture.glsl  Triangles.rchit  UniformBufferObject.glsl  Vertex.glsl  box.rchit
006 - RayTracer/src/: Box.cpp  Box.h  Cube.cpp  Cube.h  Instance.cpp  Instance.h  Material.h  Model.cpp  Model.h  Offset.h  RayTracer.cpp  RayTracer.h  Rectangle2D.cpp  Rectangle2D.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Texture.h  Vertex.h
Vulkan/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Core.h  GeometryInstance.h  Image.cpp  Image.h  Log.cpp  Log.h  QueueFamilyIndices.h  SwapChainSupportDetails.h  Utility.cpp  Utility.h  main.cpp
enc_temp_folder/94a7a4f539c7bcbc953db2bdc6232bc3/: RayTracer.cpp
